# Cidas

./: .coverage  .env.example  .gitignore  CIDAS_Implementation_Plan.md  CIDAS_Validation_Strengthening_Plan.md  CIDAS_paper_corrections.md  CIDAS_paper_updated.tex  README.md  package-lock.json  package.json
daemon/: .coverage  __init__.py  auth.py  cli.py  config.py  database.py  main.py  models.py  pyproject.toml  router.py  watchdog.sh
daemon/data/: score_baseline.json
daemon/eval/: CORPUS_PROVENANCE.md  README.md  ablation.py  baseline_guarddog.py  baseline_npm_audit.py  baseline_osv_scanner.py  baseline_socket.py  build_corpus.py  evaluate.py  generate_baseline_comparison.py  generate_provenance.py  policy_research_claims.md  threshold_sweep.py
daemon/eval/corpus/: benign.jsonl  corpus_metadata.json  hallucinated.jsonl  malicious.jsonl  typosquat.jsonl
daemon/eval/results/: ablation.json  ablation.md  after_typosquat_fix.json  baseline_comparison.md  baseline_guarddog.json  baseline_guarddog_hallucinated_test.json  baseline_npm_audit.json  baseline_osv_scanner.json  baseline_socket.json  before_typosquat_fix.json  latest.json  threshold_sweep.json  (+1 more)
daemon/install/: cidas-watchdog.service  com.cidas.watchdog.plist  install.sh
daemon/pillars/: __init__.py  aggregator.py  contextify.py  sentinel.py  shield.py
daemon/static/: index.html
daemon/tests/: __init__.py  conftest.py  test_ablation.py  test_aggregator.py  test_audit.py  test_auth.py  test_cli.py  test_contextify.py  test_database.py  test_diff_analyzer.py  test_disk_checker.py  test_drift_monitor.py  test_embeddings.py  test_llm_verifier.py  test_npm_registry.py  test_offline_cache.py  test_performance.py  test_policy.py  test_router.py  test_sentinel.py  test_shield.py  test_shield_filescan.py  test_transitive.py
daemon/utils/: __init__.py  audit_log.py  diff_analyzer.py  disk_checker.py  drift_monitor.py  embeddings.py  llm_verifier.py  logger.py  npm_registry.py  offline_cache.py  osv_client.py  policy.py  transitive.py
(+44 files in other folders)
