[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "cidas-daemon"
version = "0.1.0"
description = "CIDAS local security-screening daemon"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.0",
    "httpx>=0.27.0",
    "aiosqlite>=0.20.0",
    "sentence-transformers>=3.0.0",
    "chromadb>=0.5.0",
    "tree-sitter>=0.22.0",
    "tree-sitter-javascript>=0.21.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "anyio[trio]>=4.3.0",
    "ruff>=0.4.0",
]

[project.scripts]
cidas-daemon = "daemon.main:start"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py311"
