[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cidas-daemon"
version = "0.1.0"
description = "CIDAS local security-screening daemon"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "pydantic>=2.7.0",
    "pydantic-settings>=2.3.0",
    "aiosqlite>=0.20.0",
    "httpx>=0.27.0",
    "sentence-transformers>=3.0.0",
    "onnxruntime>=1.18.0",
    "numpy>=1.26.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "anyio[trio]>=4.3.0",
]

[project.scripts]
cidas-daemon = "daemon.main:start"

[tool.setuptools.packages.find]
where = [".."]
include = ["daemon*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = [".."]
addopts = "--tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
